Update certification years and status in index.html Years

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <p>Professional certification in MongoDB database development and management</p>
                     <div class="certification-date">
                         <i class="far fa-calendar-alt"></i>
-                        <span>2024</span>
+                        <span>2025</span>
                     </div>
                 </div>
 
@@ -267,7 +267,7 @@
                     <p>Certified in AWS cloud services and solutions</p>
                     <div class="certification-date">
                         <i class="far fa-calendar-alt"></i>
-                        <span>2024</span>
+                        <span>IN-Progress</span>
                     </div>
                 </div>
 
