Replace AWS certification with Microsoft Azure certification

--- a/index.html
+++ b/index.html
@@ -259,17 +259,17 @@
                     </div>
                 </div>
 
-                <div class="certification-card" data-aos="zoom-in">
-                    <div class="certification-icon">
-                        <i class="devicon-amazonwebservices-original colored"></i>
-                    </div>
-                    <h3>AWS Cloud Practitioner</h3>
-                    <p>Certified in AWS cloud services and solutions</p>
-                    <div class="certification-date">
-                        <i class="far fa-calendar-alt"></i>
-                        <span>IN-Progress</span>
-                    </div>
-                </div>
+              <div class="certification-card" data-aos="zoom-in">
+    <div class="certification-icon">
+        <i class="devicon-microsoftazure-original colored"></i>
+    </div>
+    <h3>Microsoft Certified Azure Fundamentals</h3>
+    <p>Certified in Microsoft Azure cloud services and solutions</p>
+    <div class="certification-date">
+        <i class="far fa-calendar-alt"></i>
+        <span>2026</span>
+    </div>
+</div>
 
                 <div class="certification-card" data-aos="zoom-in">
                     <div class="certification-icon">
